# env-sync

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
envsync/: cli.py  config.py  crypto.py  env_parser.py  gist_api.py
envsync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_crypto.py  test_env_parser.py
